<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/val1_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_height"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:text="@string/val1_text"
        android:textSize="@dimen/val_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/val2_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_height"
        android:layout_below="@id/val1_text"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:text="@string/val2_text"
        android:textSize="@dimen/val_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/val1_input"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_height"
        android:layout_marginTop="@dimen/margin"
        android:layout_toEndOf="@id/val1_text"
        android:layout_toRightOf="@id/val1_text"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/val1_hint"
        android:inputType="numberSigned"
        android:textSize="@dimen/input_size" />

    <EditText
        android:id="@+id/val2_input"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_height"
        android:layout_below="@id/val1_input"
        android:layout_marginTop="@dimen/margin"
        android:layout_toEndOf="@id/val2_text"
        android:layout_toRightOf="@id/val2_text"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/val2_hint"
        android:inputType="numberSigned"
        android:textSize="@dimen/input_size" />

    <TextView
        android:id="@+id/op_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_height"
        android:layout_below="@id/val2_text"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:text="@string/op_text"
        android:textSize="@dimen/val_text_size"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/op_select"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_height"
        android:layout_below="@id/val2_input"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_toRightOf="@id/op_text"
        android:entries="@array/op_list" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_height"
        android:layout_below="@id/op_text"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:onClick="performCalculation"
        android:text="@string/button_text"
        android:textSize="@dimen/button_size" />

    <TextView
        android:id="@+id/calcOutputText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_height"
        android:layout_below="@id/op_select"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_toRightOf="@id/calculate_button"
        android:gravity="center"
        android:text="@string/calc_output_text"
        android:textSize="@dimen/val_text_size"
        android:textStyle="bold"
        android:visibility="invisible" />
</RelativeLayout>